--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,14 @@
 @import './themes/kendo-theme-custom.scss';
+@import '~bootstrap/scss/bootstrap.scss';
+@import "@progress/kendo-font-icons/dist/index.css";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-size: 13px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -13,3 +17,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.curp{
+  cursor:  pointer !important;
+}
+
+
+button{
+  background:#3f51b5;
+  color:#fff;
+  padding:5px;
+  border-radius:3px;
+  border-color:#3f51b5;
+    
+}
+
+.w-100{
+  width:100%
+}
+
+
