--- a/src/reusable/reusable-table/reusable-table.scss
+++ b/src/reusable/reusable-table/reusable-table.scss
@@ -1,19 +1,26 @@
 /* styles.css */
-.k-search-box {
-    position: relative;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.search-icon {
-    position: absolute;
-    right: 15px;
-    color: #aaa;
-    cursor: pointer;
-    z-index: 1;
-}
-
-.search-input {
-    padding-left: 30px; /* Adjust as needed */
+.reusableTable{
+    .k-search-box {
+        position: relative;
+        display: flex;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    
+    .k-i-search,.k-i-x  {
+        position: absolute;
+        color: #aaa;
+        cursor: pointer;
+        z-index: 1;
+        right:15px
+    }
+    
+    .search-input {
+        padding-left: 30px; /* Adjust as needed */
+    }
+    
+    .table-cell:hover{
+        background-color: #e2e2e2;
+        color:#fff;
+    }
 }
